fix: sticky header on mobile

--- a/src/assets/css/nav.scss
+++ b/src/assets/css/nav.scss
@@ -128,8 +128,6 @@
 
 @media all and (max-width: variables.$mobile-max-bp) {
   .nav-container {
-    z-index: 1000000000;
-    position: absolute;
     width: 100%;
     height: 64px;
     transition: height 0.5s ease-out;
